# mt5-remote-reader-mcp

./: AGENT_GUIDE.md  CHANGELOG.md  LICENSE  README.md  build_exe.bat  mt5_tool.py  pyproject.toml  setup_vps.py
.github/workflows/: build-installer.yml
src/mt5_remote_reader_mcp/: __init__.py  mt5_tool.py  server.py  setup_vps_installer.py  ssh.py  vps_manager.py
vps-installer/: build_exe.bat  installer.iss
