[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mt5-remote-reader-mcp"
version = "0.2.1"
description = "Read-only MCP server to monitor MetaTrader 5 accounts on remote Windows VPS via SSH"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "metatrader", "mt5", "trading", "ssh", "forex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=3.0.0",
    "paramiko>=3.0.0",
]

[project.scripts]
mt5-remote-reader-mcp = "mt5_remote_reader_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Marco7734/mt5-remote-reader-mcp"
Repository = "https://github.com/Marco7734/mt5-remote-reader-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/mt5_remote_reader_mcp"]
